<?xml version="1.0"?>
<package format="2">
  <name>tams_audio_monitor</name>
  <version>0.0.0</version>
  <description>The tams_pr2_audio_monitor package</description>

  <maintainer email="me@v4hn.de">v4hn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
